# damm-v2

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
cli/: Cargo.toml
cli/src/: cmd.rs  main.rs
cli/src/common/: pda.rs
cli/src/instructions/: close_config.rs  create_config.rs  create_reward.rs  create_token_badge.rs  fund_reward.rs  mod.rs  update_config.rs  update_reward_duration.rs  update_reward_funder.rs  withdraw_ineligible_reward.rs
programs/cp-amm/: Cargo.toml
programs/cp-amm/proptest-regressions/tests/: integration_tests.txt  modify_liquidity_tests.txt  overflow_tests.txt  swap_tests.txt
programs/cp-amm/src/: constants.rs  curve.rs  error.rs  event.rs  lib.rs  macros.rs
programs/cp-amm/src/instructions/: ix_add_liquidity.rs  ix_claim_position_fee.rs  ix_claim_reward.rs  ix_close_position.rs  ix_create_position.rs  ix_fund_reward.rs  ix_initialize_pool.rs  ix_lock_position.rs  ix_permanent_lock_position.rs  ix_refresh_vesting.rs  ix_remove_liquidity.rs  ix_split_position.rs  ix_split_position2.rs  ix_swap.rs  ix_withdraw_ineligible_reward.rs  mod.rs
programs/cp-amm/src/instructions/admin/: auth.rs  ix_claim_partner_fee.rs  ix_claim_protocol_fee.rs  ix_close_claim_protocol_fee_operator.rs  ix_close_config.rs  ix_close_token_badge.rs  ix_create_claim_protocol_fee_operator.rs  ix_create_config.rs  ix_create_dynamic_config.rs  ix_create_static_config.rs  ix_create_token_badge.rs  ix_fund_reward.rs  ix_initialize_reward.rs  ix_set_pool_status.rs  ix_update_reward_duration.rs  ix_update_reward_funder.rs  ix_withdraw_ineligible_reward.rs  mod.rs
programs/cp-amm/src/instructions/initialize_pool/: initialize_pool_utils.rs  ix_initialize_customizable_pool.rs  ix_initialize_pool.rs  mod.rs  (+1 more)
programs/cp-amm/src/math/: fee_math.rs  mod.rs  safe_math.rs  u128x128_math.rs  utils_math.rs
programs/cp-amm/src/params/: customizable_params.rs  fee_parameters.rs  mod.rs  pool_fees.rs  swap.rs
programs/cp-amm/src/pool_action_access/: base.rs  permissionless.rs
programs/cp-amm/src/state/: config.rs  fee.rs  mod.rs  pool.rs  position.rs  token_badge.rs  vesting.rs
programs/cp-amm/src/tests/: dynamic_fee_tests.rs  fee_scheduler_tests.rs  integration_tests.rs  layout_test.rs  mod.rs  modify_liquidity_tests.rs  overflow_tests.rs  price_math.rs  reward_tests.rs  swap_tests.rs  test_rate_limiter.rs  test_volatility_accumulate.rs
programs/cp-amm/src/utils/: activation_handler.rs  alpha_vault.rs  token.rs
(+71 files in other folders)
