[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "cli"
authors = ["minh <minh@racoons.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
local = ["cp-amm/local"]
e2e-test = ["local"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-client = { workspace = true }
clap = { version = "4.3.3", features = ["derive"] }
anyhow = "1.0.71"
cp-amm = { path = "../programs/cp-amm", features = ["cpi"] }
shellexpand = "3.1.0"
spl-associated-token-account = "1"
rustls-webpki = "0.102"