[package]
name = "cp-amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cp_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["event-cpi"]}
anchor-spl = "0.28.0"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
static_assertions = "1.1.0"
solana-program = "1.16.12"
ruint = "1.3.0"
num-traits = "0.2.16"
num_enum = "0.7.1"
num = "0.4.0"

[dev-dependencies]
proptest = "1.2.0"
